# dockcross-conan-example

./: .gitignore  CMakeLists.txt  build.sh  conanfile.txt  crosscompile.sh  main.cpp
